# ControlSoftware

./: CMakeLists.txt  README.md  doxygen.cfg
app/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/include/common/: common_types.h  register.h  singleton.h  string.h  timer.h
common/include/common/command/: command.h  command_console.h  command_datetime.h  command_gpio.h  command_handler.h  command_heartbeat.h  command_help.h  command_led.h  command_server.h  command_smtp.h  command_system.h  command_template.h  command_venus638flpx.h
common/include/common/console/: console.h
common/include/common/control/: control.h  control_template.h
common/include/common/drivers/: i2c.h  led.h  serial.h
common/include/common/drivers/am335x/: clock_module.h  control_module.h  gpio.h
common/include/common/drivers/devices/displays/: ssd1306.h
common/include/common/drivers/devices/gps/: gps.h  venus638flpx.h
common/include/common/error/: error.h
common/include/common/hardware/: hardware.h  hardware_base.h
common/include/common/http/: client.h  http.h
common/include/common/http/client/: client.h
common/include/common/http/server/: request.h  server.h
common/include/common/logger/: log.h
common/include/common/resources/: resources.h
common/include/common/resources/font/: glcd.h
common/include/common/smtp/client/: client.h
common/include/common/system/: datetime.h  system.h
common/include/common/transport/: client.h
common/src/: common_types.cpp  string.cpp  timer.cpp
common/src/cjson/: cJSON.c
common/src/command/: command.cpp  command_console.cpp  command_datetime.cpp  command_gpio.cpp  command_handler.cpp  command_heartbeat.cpp  command_help.cpp  command_led.cpp  command_server.cpp  command_smtp.cpp  command_system.cpp  command_venus638flpx.cpp
common/src/console/: console.cpp
common/src/control/: control.cpp
common/src/drivers/: i2c.cpp  led.cpp  serial.cpp
common/src/drivers/am335x/: clock_module.cpp  control_module.cpp  gpio.cpp
common/src/drivers/devices/displays/: ssd1306.cpp
common/src/drivers/devices/gps/: gps.cpp  venus638flpx.cpp
common/src/error/: error.cpp
common/src/hardware/: hardware.cpp  hardware_base.cpp
common/src/http/: client.cpp  http.cpp
common/src/http/client/: client.cpp
common/src/http/server/: request.cpp  server.cpp
common/src/logger/: log.cpp
common/src/resources/: resources.cpp
common/src/resources/font/: glcd.cpp
common/src/smtp/client/: client.cpp
common/src/system/: datetime.cpp  system.cpp
common/src/transport/: client.cpp
hardware/beagleboneblack/: CMakeLists.txt  settings.sh
hardware/beagleboneblack/include/beagleboneblack/: hardware_beagleboneblack.h
hardware/beagleboneblack/include/beagleboneblack/resources/: index.html  resources.h
hardware/beagleboneblack/include/hardware/: hardware.h
hardware/beagleboneblack/include/hardware/resources/: resources.h
hardware/beagleboneblack/resources/: bundle.js  index.html  main.js
hardware/beagleboneblack/src/: hardware.cpp  hardware_beagleboneblack.cpp
hardware/beagleboneblack/src/resources/: ask.s  bundle.js.s  index.html.s  index.s  main.js.s  resources.cpp
hardware/example/: CMakeLists.txt
hardware/example/include/hardware/: hardware.h
hardware/example/src/: hardware.cpp
hardware/mlb/: CMakeLists.txt  settings.sh
hardware/mlb/include/hardware/: hardware.h
hardware/mlb/src/: hardware.cpp
hardware/mlb/src/command/: command_api.cpp
http/: CMakeLists.txt
http/include/http/: client.h  command.h  http.h
http/include/http/server/: request.h  response.h  router.h  server.h
http/src/: client.cpp  client.cpp.autosave  command.cpp  http.cpp
http/src/server/: request.cpp  response.cpp  router.cpp  server.cpp
remote/: CMakeLists.txt  main.cpp
smtp/: CMakeLists.txt
smtp/include/smtp/: client.h  command.h  smtp.h
smtp/src/: client.cpp  command.cpp  smtp.cpp
web/: package.json  webpack.config.js
web/src/: main.js
web/src/api/: api.js
web/src/control/: leds.js  navigationtool.js  skeleton.js  timer.js
